package DesignPatterns.Factory.SimpleFactory.Fruit;

public class Apple extends Fruit {
    @Override
    public void getName() {
        System.out.println("Apple");
    }
}