package DesignPatterns.Factory.SimpleFactory.Fruit;

public abstract class Fruit {
    public abstract void getName();
}