package DesignPatterns.Factory.SimpleFactory.Fruit;

public class Pear extends Fruit {
	@Override
	public void getName() {
		System.out.println("Pear");
	}
}